<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/profile"
    android:focusableInTouchMode="true"
    tools:context=".ProfileFragment">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
   android:layout_margin="20dp"
    >
    <ProgressBar
        android:id="@+id/pb"
        android:layout_width="60dp"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:layout_gravity="center"
        android:theme="@style/MaterialAlertDialog.Material3"

        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textStyle="bold"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_name1"
        android:id="@+id/name"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textStyle="bold"
            android:textColor="@color/black"
            />
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/genderGrp"


            >
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male1"
                android:buttonTint="@color/blue"
                android:id="@+id/male"
                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female1"
                android:buttonTint="@color/blue"
                android:id="@+id/female"

                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/others"
                android:buttonTint="@color/blue"
                android:id="@+id/other"

                />
        </RadioGroup>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phone_number"
        android:textColor="@color/black"
        android:textStyle="bold"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/enter_your_phone_no"
        android:id="@+id/phone"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_address"
        android:textColor="@color/black"
        android:textStyle="bold"

        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/enter_your_email_address"
        android:id="@+id/email"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:textColor="@color/black"
        android:textStyle="bold"

        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/enter_your_age"
        android:id="@+id/age"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/city"
        android:textColor="@color/black"
        android:textStyle="bold"

        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/enter_your_city"
        android:id="@+id/city"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/height"
        android:textColor="@color/black"
        android:textStyle="bold"

        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="00"
        android:layout_marginTop="10sp"

        android:id="@+id/height"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/target_weight"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="10sp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="00"
        android:layout_marginTop="10sp"
        android:id="@+id/weight"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/body_mass_index"
        android:layout_marginTop="10sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/bmi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="00"
        android:layout_marginTop="10sp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/body_fat_percent1"
        android:layout_marginTop="10sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="00"
        android:id="@+id/bfp"
        android:layout_marginTop="10sp"
        />

    <Button
        android:id="@+id/submit"
        android:layout_width="170dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="25sp"
        android:gravity="center"
        android:layout_marginBottom="150sp"
        android:layout_gravity="center"
        android:textSize="15dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@drawable/mybutton"
        android:text="DONE"/>
</LinearLayout>

</ScrollView>