<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusableInTouchMode="true"
    tools:context=".DinnerActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/appbar_layout"
        >
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            android:layout_alignParentBottom="true"
            app:layout_behavior="@string/hide_bottom_view_on_scroll_behavior"
            >
            <LinearLayout
                android:id="@+id/btn_backadd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:orientation="horizontal"
                >
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/backarrow"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="BACK"
                    android:textColor="@color/white"
                    android:layout_marginLeft="10dp"
                    android:textSize="20dp"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_marginBottom="10sp"
        android:layout_marginLeft="10sp"
        android:layout_marginTop="10sp"
        android:layout_marginRight="10sp"
        app:cardCornerRadius="10dp"
        app:cardElevation="15dp"

        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1"
            android:layout_marginBottom="10sp"
            >
            <TextView
                android:id="@+id/breakfast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_snack"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="20dp"
                />
            <LinearLayout
                android:id="@+id/layout_breakfast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/todays_date"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:layout_marginLeft="20dp"/>
                    <TextView
                        android:id="@+id/selectdate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/select_date"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        style="bold"
                        android:layout_marginLeft="40dp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginRight="20dp"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/todays_time"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:layout_marginLeft="20dp"/>
                    <TextView
                        android:id="@+id/selecttime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/select_time"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        style="bold"
                        android:layout_marginLeft="40dp"/>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="30sp"
                    android:layout_margin="10dp"
                    android:layout_gravity="center"

                    >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginRight="20dp"

                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Diet Meal"
                            android:textColor="@color/black"
                            android:textSize="15sp"
                            android:textStyle="bold"
                            android:layout_marginTop="10sp"
                            android:layout_marginRight="20sp"
                            android:layout_marginLeft="10dp"/>
                        <LinearLayout

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:background="@drawable/bloak"
                            android:weightSum="1"
                            android:gravity="center">
                            >
                            <AutoCompleteTextView
                                android:id="@+id/addbreakfast"
                                android:layout_width="200dp"
                                android:layout_height="40dp"
                                android:background="@null"
                                android:paddingLeft="10dp"
                                android:layout_weight="0.6"
                                android:layout_marginLeft="0dp"
                                android:layout_marginTop="0dp"
                                android:completionThreshold="1"
                                android:completionHint="Add Breakfast"
                                />


                        </LinearLayout>
                    </LinearLayout>



                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Quantity"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:layout_marginTop="10sp"
                        android:layout_marginRight="10sp"
                        android:layout_marginLeft="20dp"/>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginLeft="20sp"

                        >
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:background="@drawable/bloak"
                            android:weightSum="1"
                            android:gravity="center">

                            <EditText
                                android:id="@+id/quantity"
                                android:layout_width="130dp"
                                android:layout_height="40dp"
                                android:background="@null"
                                android:paddingLeft="10dp"
                                android:hint="Quantity"
                                android:layout_weight="0.6"/>

                            <Spinner
                                android:id="@+id/spinnerdignosisQ"
                                android:layout_height="match_parent"
                                android:layout_width="match_parent"
                                android:backgroundTint="@color/blue"
                                android:spinnerMode="dialog"
                                tools:ignore="HardcodedText" />
                        </LinearLayout>

                        <TextView
                            android:id="@+id/kcal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/kcal"
                            android:visibility="gone"
                            android:textSize="15sp"
                            android:textStyle="bold"
                            android:layout_marginLeft="5sp"
                            android:layout_marginTop="15dp"
                            />

                    </LinearLayout>
                </LinearLayout>


            </LinearLayout>
            <Button
                android:id="@+id/breakbtnadd"

                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:padding="10dp"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:textSize="15dp"

                app:backgroundTint="@null"
                android:textColor="@color/white"
                android:background="@drawable/mybutton"
                android:text="ADD" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="horizontal"
            android:fillViewport="true">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="5dp"
                android:stretchColumns="3"
                android:shrinkColumns="0.1"
                android:paddingRight="5dp">


                <TableRow
                    android:background="#51B435"
                    android:padding="10dp">
                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"

                        android:gravity="center"
                        android:textStyle="bold"
                        android:text="Today Date"
                        />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:textStyle="bold"
                        android:gravity="center"

                        android:text="Items"
                        />
                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:text="Quantity"
                        />


                </TableRow>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/breakfastrecylesview"
                    android:layout_marginBottom="10sp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </androidx.recyclerview.widget.RecyclerView>
            </TableLayout>
        </HorizontalScrollView>
    </LinearLayout>

</LinearLayout>